solc_mutator_ossfuzz_seed_corpus/test_sol/test_2d46a59f6a19a73f75d692175d0a3738c91c3a962cb7a7c7da8e7296b5f49145_0ae4d7c3c68b9d2b8e5e70ed57b9bcbbee220147_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  using L0 for *;
  using L0 for *;
  error er0();
  function f0(uint184 i0,bool i1) external    returns(bytes2 o0,bytes11 o1)
  {
  }
  modifier m0(address i0) 
  {
    _;
  }
  function f1(bytes7 i0,bytes3 i1) public  m0(address(0x0000000000000000000000000000000000000004))  returns(function () external   returns (bytes5, uint160) o0)
  {
  }
  function f2() private   
  {
  }
  event ev0();
  function f3(function (address payable, bool, address) internal   returns (bytes23) i0) external    returns(int128 o0,int168 o1)
  {
    (function () external   returns (bytes5, uint160) l0) = f1({i0: bytes7(0xffffffffffffff), i1: bytes3(bytes20(address(0x0000000000000000000000000000000000000000)))});
  }
  function f4() public  m0(address(0x0000000000000000000000000000000000000008)) 
  {
  }
}
using L0 for uint;
using L0 for uint;
pragma solidity >= 0.0.0;
// ----
// TypeError 4103: (su0.sol:423-496): Internal type is not allowed for public or external functions.
